syntax = "proto3";

option go_package = "pkg/proto/hello";

package hello;

service TrafficServer {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SendData (DataRequest) returns (DataReply);
  rpc FetchData (DataRequest) returns (stream DataReply);
  rpc ReceiveData (stream DataRequest) returns (DataReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message DataRequest {
  string data = 1;
}

message DataReply {
  string message = 1;
}